--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "crazyflie_cpp"]
 	path = crazyflie_cpp
 	url = https://github.com/whoenig/crazyflie_cpp.git
+[submodule "libmotioncapture"]
+	path = libmotioncapture
+	url = https://github.com/IMRCLab/libmotioncapture.git
